test/spec_vectors/local_tee/fail/module_3.wat
(module (func $type-local-num-vs-num (local f64 i64) (f64.neg (local.tee 1 (i64.const 0)))))